Comment out push.js script inclusion

--- a/web/html/base.html
+++ b/web/html/base.html
@@ -29,8 +29,12 @@
   </style>
   {{if .HasUser}}
   {{template "nav.html" .}}
-  <!-- For the web push notifications -->
-  <script src="/res/js/push.js"></script>
+  <!-- 
+    For the web push notifications
+    Comment it out to resolve it accidentally finding
+    and updating the first .btn it finds
+  -->
+  <!--script src="/res/js/push.js"></script-->
   <div class="container my-3">
     {{template "content" .}}
   </div>
