--- a/web/html/nav.html
+++ b/web/html/nav.html
@@ -19,7 +19,7 @@
           {{end}}
         {{end}}
           <li class="nav-item">
-            <a class="nav-link" href="https://issues.liferay.com/browse/LRSUPPORT-23591" data-toggle="tooltip" title="Report bug on GitHub" target="_blank"><i class="fa fa-bug" aria-hidden="true"></i> Bug report</a>
+            <a class="nav-link" href="https://issues.liferay.com/browse/LRSUPPORT-23591" data-toggle="tooltip" title="Report bug on issues.liferay.com" target="_blank"><i class="fa fa-bug" aria-hidden="true"></i> Bug report</a>
           </li>
       </ul>
       <span class="navbar-text">
