Don't select properties on click

--- a/web/html/properties.html
+++ b/web/html/properties.html
@@ -2,7 +2,7 @@
 <div class="row text-center">
     <div class="col-6">
         <h4>6.2 properties</h4>
-           <textarea class="form-control" rows="7" onclick="this.select()">
+           <textarea class="form-control" rows="7">
 {{with .Ext62 -}}{{.Driver}}
 {{.URL}}
 {{.User}}
@@ -11,7 +11,7 @@
     </div>
     <div class="col-6">
                 <h4>DXP properties</h4>
-            <textarea class="form-control" rows="7" onclick="this.select()">
+            <textarea class="form-control" rows="7">
 {{with .ExtDXP -}}
 {{.Driver}}
 {{.URL}}
