--- a/web/html/nav.html
+++ b/web/html/nav.html
@@ -34,14 +34,26 @@
   {{end}}
 </nav>
 <div class="container">
-  
   {{if .AnyOnline}}
   <ul class="nav nav-pills justify-content-center">
       {{range .Agents}}
-          <li class="nav-item btn {{if .Up}}btn-success{{else}}btn-danger{{end}} disabled btn-sm mx-1" data-toggle="tooltip" title="{{.LongName}}">
-              <i class="fa fa-fw {{if .Up}}fa-check{{else}}fa-exclamation-triangle{{end}}" aria-hidden="true"></i>
+        {{if .Up}}
+          <div class="dropdown">
+            <button class="btn btn-sm dropdown-toggle mx-1 btn-success" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <i class="fa fa-fw fa-check" aria-hidden="true"></i>
+                {{.ShortName}}
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="/importdb?agent={{.ShortName}}">Import</a>
+                <a class="dropdown-item" href="/createdb?agent={{.ShortName}}">Create</a>
+            </div>
+          </div>
+        {{else}}
+          <button class="btn btn-sm dropdown-toggle mx-1 btn-danger" type="button" data-toggle="tooltip" title="This database server is not available at the moment. Please contact a CloudDB administrator.">
+              <i class="fa fa-fw fa-exclamation-triangle" aria-hidden="true"></i>
               {{.ShortName}}
-          </li>
+          </button>
+        {{end}}
       {{end}}
   </ul>
   {{else}}
